# econcheck-fired-festival

./: .gitignore  AGENT.md  HARNESS.md  README.md  ROADMAP.md  TECHNICAL_SPEC.md  app.py  pyproject.toml
app/: __init__.py  chat.py  observability.py
econcheck_fired_festival.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
harness/: __init__.py  alarms.py  orchestrator.py  state.py
harness/checkpoints/: __init__.py  answer.py  base.py  code.py  data.py
harness/guardrails/: __init__.py  base.py  input.py  planning.py
harness/observability/: __init__.py  loader.py  runner.py  streamlit_ui.py  view_models.py
harness/observability/fixtures/sample_cpi_run/: alarms.json  analysis.json  checker.json  checkpoints.json  code.json  data_selection.json  draft.json  guardrails.json  input.json  planner.json  search.json  (+1 more)
harness/persistence/: __init__.py
harness/tools/: __init__.py  code_runner.py  fred.py
pages/: 2_Observability.py
tests/: test_alarm_routing.py  test_alarms.py  test_artifacts.py  test_checkpoints.py  test_code_runner.py  test_cpi_e2e.py  test_fred_api_key_flow.py  test_fred_search.py  test_guardrails.py  test_mock_worker.py  test_observability.py  test_openai_checker_contract.py  test_openai_key_flow.py  test_openai_worker_contract.py  test_orchestrator.py  test_persistence.py  test_project_initialization.py  test_real_agent_e2e.py  test_state.py  test_streamlit_smoke.py  test_worker_interface.py
workers/: __init__.py  artifacts.py  base.py  mock_checker.py  mock_worker.py  openai_checker.py  openai_client.py  openai_worker.py
