[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "econcheck-fired-festival"
version = "0.1.0"
description = "A governed economic-analysis harness for querying FRED data."
requires-python = ">=3.11"
dependencies = [
    "openai",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "harness*", "workers*"]
